--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ theme_mode: dark # [light | dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://github.com/smallbei/smallbei.github.io/blob/main/assets/img/favicons/ico-header.png?raw=true
+avatar: https://pic.imgdb.cn/item/66305cc80ea9cb14038bd930.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
