--- a/_config.yml
+++ b/_config.yml
@@ -174,6 +174,10 @@ defaults:
 
 sass:
   style: compressed
+  quiet_deps: true
+  load_paths:
+    - _sass
+    - assets/css
 
 compress_html:
   clippings: all
